fixing alignment

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 	font-size: 1rem;
 	margin-top: 10px;
 	gap: 170px;
-	margin-left: -400px;
+	margin-left: -520px;
 }
 
 .navbar img {
